--- a/about/index.html
+++ b/about/index.html
@@ -448,7 +448,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <i class="fa-solid fa-cookie"></i>
                             Cookies
                         </a>
-                        <a href="/about/lincense/" class="footer-link">
+                        <a href="/about/license/" class="footer-link">
                             <i class="fa-solid fa-scale-balanced"></i>
                             Licencia
                         </a>
