--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         }
 
         .logo-large {
-            width: 120px;
-            height: 120px;
+            width: 500px;
+            height: 240px;
             margin: 0 auto var(--space-lg);
             display: block;
         }
@@ -327,8 +327,8 @@
             }
 
             .logo-large {
-                width: 80px;
-                height: 80px;
+                width: 280px;
+                height: 140px;
             }
 
             .enter-button {
@@ -390,9 +390,9 @@
 
     <main class="welcome-main" role="main">
         <section class="welcome-hero">
-            <img src="/assets/foxweb/icon.png" alt="FoxWeb Logo - Centro de descargas gratis" class="logo-large">
+            <img src="/assets/foxweb/mascot.webp" alt="FoxWeb Logo - Centro de descargas gratis" class="logo-large">
             <!-- H1 ampliado y optimizado -->
-            <h1>FoxWeb - Tu Centro de Descargas Gratis de Software, Linux, Juegos y APKs Seguras</h1>
+            <h1>Tu Centro de Descargas Gratis de Software, Linux, Juegos y APKs Seguras</h1>
             <p>Tu destino confiable para descargas de software esencial, sistemas optimizados, juegos clásicos y
                 aplicaciones verificadas para PC y dispositivos móviles.</p>
         </section>
